On the road to 2025.02:
- kernel 6.13.x
- removed broadcom-wl module
setup:
- fixed btrfs data raid level (was always set as single)
- removed btrfs raid0 selection
---
Highlights: 2025.01
Environment:
- added missing efitools for Secure Boot certificate creation
- updated Secure Boot scripts
- updated Xfce to 4.20 series
- fixed compression algorithm choosing on bootup
- added partclone for supported filesystems
setup:
- replaced sbsigntools with systemd-sbsign
---
Highlights 2024.12:
init:
- fixed font setting on early userspace
cpio:
- removed mkinitcpio and mkinitcpio-busybox from pacman db
- removed more mkinitcpio files
---
Highligts 2024.11:
- kernel 6.12.x
- adapted pam 1.7.0 changes
- fixed archinstall 3.0.x
---
Highlights 2024.10:
- kernel 6.11.x
---
Highlights 2024.09:
- pacman 7.0
- switched Europe domain from archboot.de to archboot.eu
- added custom autorun script support
- added archboot-x86_64-uki.sh script
- added archboot-aarch64-uki.sh script
- switched name scheme for UKI images
- switched TRIGGERS to an array
- reordered config arrays
- switched to use more arrays to simplify and cleanup code
- run depmod on container creation
setup:
- switched to new limine 8.0 config layout (issue #4)
- switched to mkinitcpio uki generation (issue #3)
---
Highlights 2024.08:
- added clean-blockdevice.sh script
Environment:
- updated and unified usage information in all scripts
- added bash completion for restore-usbstick.sh and clean-blockdevice.sh
---
Highlights 2024.07:
- kernel 6.10.x
- OpenSSH 9.8
- use 3cpio with zstd for concatenated cpio archive initramfs
  decompression => up to 25% faster bootup
- launch bandwhich on VC5 and bottom on VC6
- updated MOTD
Environment:
- optimized init.sh and login.sh
- changed eza default date colour to white
- changed dialog to new colour scheme
- added bandwhich, bottom, choose, dog, dysk, miniserve, netscanner,
  ouch, trippy and zoxide
- fixed smb filesystem